<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.firsttest.FragmentCalculator">

    <LinearLayout
        android:id="@+id/LinearLayoutCalc"
        android:layout_width="match_parent"
        android:layout_height="574dp"
        android:background="@color/colorF2"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/calcName"
            android:textColor="@color/colorBlack"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/LinearLayoutContentCalc"
            android:layout_width="match_parent"
            android:layout_height="487dp"
            android:layout_marginTop="26dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout1"
                android:layout_width="380dp"
                android:layout_height="80dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corner_linearlayout"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:text="@string/count_amount_text"
                    android:textColor="#9B9B9B"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/Edit_amount_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="7dp"
                    android:background="#00000000"
                    android:inputType="number"
                    android:padding="0dp"
                    android:text="@string/string_edit_amount_input"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"
                    android:importantForAutofill="no"
                    tools:ignore="LabelFor" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout2"
                android:layout_width="380dp"
                android:layout_height="67dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/LinearLayout3"
                    android:layout_width="187dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/round_corner_linearlayout"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/term_days"
                        android:textColor="#9B9B9B"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/EditText_input_days"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#00000000"
                        android:inputType="number"
                        android:text="@string/string_editText_input_days"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout4"
                    android:layout_width="187dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="6dp"
                    android:background="@drawable/round_corner_linearlayout"
                    android:orientation="vertical"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="14dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rate_percent"
                        android:textColor="#9B9B9B"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/EditText_input_rate_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#00000000"
                        android:inputType="number"
                        android:padding="0dp"
                        android:text="@string/string_editText_input_rate_percent"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        tools:ignore="LabelFor"
                        android:importantForAutofill="no" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_calculate"
                android:layout_width="380dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_corners"
                android:onClick="onClick"
                android:text="@string/calculate_button"
                android:textSize="15sp"
                tools:ignore="OnClick" />

            <LinearLayout
                android:id="@+id/LinearLayout5"
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="6dp"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/LinearLayout6"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="14dp"
                    android:paddingBottom="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_conditions"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="12dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_amount"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/amount_output"
                            android:layout_marginStart="14dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_edit_amount_input"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="12dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_term"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/days_output"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="27dp"
                            android:text="@string/string_editText_input_days"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout7"
                    android:layout_width="190dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingStart="90dp"
                    android:paddingEnd="0dp"
                    android:paddingTop="48dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rate"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/percent_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text= "@string/string_editText_input_rate_percent"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:layout_marginStart="7dp"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="15dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_return_amount"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                    <RelativeLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp">

                        <TextView
                            android:id="@+id/amount_to_return_output"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/string_amount_to_return_output"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:gravity="end" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_overpayment"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />
                    <RelativeLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="108dp">

                        <TextView
                            android:id="@+id/overpayment_output"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:text="@string/string_overpayment_output"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>