<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivityMain"
    android:background="@color/colorFC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="634dp"
        android:background="@color/colorF2"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="155dp"
                android:text="@string/loans_name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <Button
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="137dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/calculator_button_main"
                android:onClick="calcOpenSecondAct" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:background="@drawable/round_corners"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/round_corners_layout_pick_up_top"
                    android:textSize="13sp"
                    android:text="Подобрать займ"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="9sp"
                    android:text="@string/text_production_methods"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp">

                    <LinearLayout
                        android:layout_marginTop="9dp"
                        android:layout_width="match_parent"
                        android:layout_height="39dp"
                        android:onClick="openBottomSheet"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView_name_selected_method"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/textView_production_methods_comboBox"
                            android:textSize="14sp"/>

                        <Button
                            android:layout_width="7dp"
                            android:layout_height="19dp"
                            android:background="@drawable/comboboxbutton"
                            android:layout_marginStart="210dp"
                            android:onClick="openBottomSheet">

                        </Button>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/dark_gray"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9sp"
                        android:text="@string/string_amount"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="9sp"
                        android:layout_marginStart="59dp"
                        android:text="@string/term_days"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/textView_sum_loans_second_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/string_amount_editTex_pickUp"
                        android:inputType="number"
                        android:background="@color/color_buttons"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"/>

                    <EditText
                        android:id="@+id/textView_date_loans_second_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginStart="44dp"
                        android:text="@string/string_term_days_pickUp"
                        android:inputType="number"
                        android:background="@color/color_buttons"
                        android:importantForAutofill="no"
                        tools:ignore="LabelFor"/>
                </LinearLayout>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/round_corner_button_white"
                    android:onClick="pickUpOpenSecondAct"
                    android:text="@string/string_button_pick_up"
                    android:textColor="@color/colorBlack"
                    android:textSize="12sp" />
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"
                android:text="@string/string_good_offers"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_good_offers"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/dark_gray"
                android:text="@string/news_name"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewOnMain"
                android:layout_width="match_parent"
                android:layout_height="645dp"
                android:background="@color/colorF2"
                android:onClick="newsOpenSecondAct"/>

    </LinearLayout>
        </ScrollView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>